# MetamorphicGuard

./: .gitignore  BRANCH_PROTECTION_GUIDE.md  BRANCH_PROTECTION_QUICK_SETUP.md  CHANGELOG.md  DEMO_PROJECT_SUMMARY.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v3.3.0.md  SECURITY.md  SHIPPING_REVIEW.md  TECHNICAL_EVALUATION_AND_ROADMAP.md  mkdocs.yml  pyproject.toml  requirements-all.txt  requirements-base.txt  requirements-dev.txt  requirements-docs.txt  requirements-llm.txt  requirements-otel.txt  requirements-queue.txt  requirements.txt  setup.py
.github/: dependabot.yml
comprehensive_demo_project/: .gitignore  README.md  TUTORIAL.md  pyproject.toml  run_demo.py
comprehensive_demo_project/configs/: basic.toml  distributed.toml  llm.toml  policy-strict.toml
comprehensive_demo_project/implementations/: baseline_recommender.py  candidate_improved.py  candidate_llm.py  candidate_regression.py
comprehensive_demo_project/scripts/: run_basic.sh  run_distributed.sh  run_llm.sh  runner.py  setup_redis.sh
comprehensive_demo_project/src/comprehensive_demo/: __init__.py  task_registry.py  task_spec.py
docs/: architecture.md  comprehensive-evaluation-and-roadmap-2025.md  comprehensive-senior-review-2025.md  cookbook.md  github-actions.md  governance.md  index.md  llm-known-limitations.md  llm-usage-example.md  reporting.md  senior-review-and-roadmap.md  test-results.md
fairness_guard_project/: README.md
llm_demo_project/: README.md  TUTORIAL.md  run_demo.py
metamorphic_guard/: __init__.py  adaptive.py  api.py  audit.py  bundle.py  cli.py  config.py  cost_estimation.py  dispatch.py  dispatch_queue.py  errors.py  gate.py  generators.py  harness.py  heartbeat_manager.py  junit.py  llm_harness.py  llm_specs.py  model_registry.py  monitoring.py  multiple_comparisons.py  notifications.py  observability.py  plugins.py  policy.py  queue_adapter.py  queue_serialization.py  relations.py  report_schema.py  reporting.py  sandbox.py  sandbox_workspace.py  sequential_testing.py  specs.py  stability.py  stability_audit.py  telemetry.py  types.py  util.py  worker.py
pytest_metamorphic/: plugin.py
rag_guard_demo/: README.md  TUTORIAL.md  knowledge_base.json  run_demo.py
ranking_guard_project/: README.md  pyproject.toml
schemas/: config.schema.json  report.schema.json
scripts/: check_vulnerabilities.py  validate_optional_deps.py
templates/: adaptive.toml  distributed.toml  docker-executor.toml  minimal.toml  ranking.toml
tests/: conftest.py  test_adaptive_growing.py  test_adaptive_sampling.py  (+29 more)
(+1082 files in other folders)
