[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metamorphic_guard"
version = "1.2.1"
description = "A Python library for comparing program versions using metamorphic testing"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Spencer Duh" }]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
]

[project.scripts]
metamorphic-guard = "metamorphic_guard.cli:main"
metaguard = "metamorphic_guard.cli:main"
metamorphic-guard-worker = "metamorphic_guard.worker:main"

[project.urls]
Homepage = "https://github.com/duhboto/MetamorphicGuard"
"Bug Tracker" = "https://github.com/duhboto/MetamorphicGuard/issues"
Documentation = "https://pypi.org/project/metamorphic-guard/"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
llm = [
    "openai>=1.0.0",
]

[project.entry-points."metamorphic_guard.executors"]
openai = "metamorphic_guard.executors.openai:OpenAIExecutor"

[project.entry-points."metamorphic_guard.mutants"]
paraphrase = "metamorphic_guard.mutants.builtin:ParaphraseMutant"
negation_flip = "metamorphic_guard.mutants.builtin:NegationFlipMutant"
role_swap = "metamorphic_guard.mutants.builtin:RoleSwapMutant"

[project.entry-points."metamorphic_guard.judges"]
length = "metamorphic_guard.judges.builtin:LengthJudge"
no_pii = "metamorphic_guard.judges.builtin:NoPIIJudge"
